--- a/index.css
+++ b/index.css
@@ -1,21 +1,68 @@
 #video1{
-	position: fixed;
-	min-width: 100%;
-	min-height: 100%;
-	overflow: hidden;
-	z-index: -1;
-
+  position: absolute;
+  right: 0;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: -1;
+  width: 100%
 }
 
 #div1{
-	display: flex;
-    align-content: center;
-    justify-content: center;
-    height: 100vh;
-    overflow: hidden;
-}
-
-#overlay{
+color: #fff; 
+height: 50vh;
+font-size: 50px; 
+padding: 30px;
+letter-spacing: 2px;
 
 }
 
+#container{
+display: flex; 
+justify-content: flex-start;
+align-items: flex-end;
+height: 80vh;
+overflow: hidden;
+
+}
+
+#div2{
+	height: 45vh;
+margin-top: 200px;
+letter-spacing: 1px;
+padding: 50px 130px;
+width: 100%;
+line-height: 35px;
+font-size: 17px;
+}
+
+#head{
+font-size: 40px;
+text-align: center;
+}
+
+.sub{
+	background-color: #fff;
+
+
+
+}
+
+.grid-container{
+	display: grid;
+	grid-template-columns:58vh 58vh 58vh;
+	column-gap: 30px;
+	padding-left:25px;
+
+
+}
+
+#maindiv{
+	background-image: url(./asset/background2.png);
+	background-size: cover;
+	background-position: center;
+	background-color: rgba(0,0,0,0.6);
+	background-blend-mode: overlay;
+	margin-top: 50px;
+
+}
