--- a/index.css
+++ b/index.css
@@ -87,7 +87,7 @@ color: #fff;
   margin-bottom: 20px;
 }
 
-.img2{
+.img2{  
   margin-left: 30px;
 }
 
@@ -100,12 +100,12 @@ color: #fff;
   padding: 60px 20px 20px 40px;
 }
 
-#impact {
+#impact { 
   width: 30%;
   font-size: 40px;
   font-weight: 10px;
   height: 20vh;
-  padding: 60px;
+  padding: 30px 0px 0px 90px;
   margin-left: 510px;
   margin-top: 30px;
 }
@@ -114,6 +114,13 @@ color: #fff;
   margin: 0px 0px 0px 90px;
 }
 
+.hd3{
+  font-size: 60px;
+}
+
+.para2{
+  font-size: 18px;
+}
 
 @media only screen and (max-width: 600px) {
  .navbar .nav-item {
@@ -187,16 +194,19 @@ color: #fff;
 
 #smallbox {
   margin: 30px;
-  padding: 60px 10px 20px 60px;
+  padding: 60px 10px 20px 110px;
 }
 
 #impact {
   width: 40%;
   font-size: 20px;
   font-weight: 10px;
-  margin-left: 60px;
+  margin-left: 100px;
   margin-top: 50px;
+  height: 15vh;
+  padding: 15px 0px 0px 5px ;
 }
+
 #row1{
   height: 120vh;
 }
@@ -204,7 +214,17 @@ color: #fff;
 #column{
   margin: 10px 0px 0px 70px;
 }
+
+.hd3{
+  font-size: 40px;
 }
+
+.para2{
+  font-size: 14px;
+}
+
+}
+
 @media only screen and (min-width: 600px) {
   .navbar .nav-item {
 	display: flex;
