--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@
   display: flex;
   height: 80vh;
   overflow: hidden; 
-   }
+}
 
 .div1 {
   margin: 280px 30px 30px 40px;
@@ -42,6 +42,7 @@ color: #fff;
 
 .btn{
   padding: 5px 20px;
+  background-color: rgb(92,188,188);
 }
 
 #div2 {
@@ -85,6 +86,7 @@ color: #fff;
   margin-left: 150px;
   padding: 5px 10px 5px 10px;
   margin-bottom: 20px;
+  background-color: rgb(92,188,188);
 }
 
 .img2{  
@@ -128,7 +130,7 @@ color: #fff;
 
 #youtubediv{
   height: 75vh;
-  background-color: aquamarine;
+  background-color: rgb(92,188,188);
   color: white;
 text-align: center;
 margin-top: 50px;
@@ -158,7 +160,7 @@ justify-content: space-between
 
 .but{
   color: #fff;
-  background-color: yellow;
+  background-color: rgb(242,187,67);
   padding: 10px 30px;
   border: none;
   margin-top: 5px;
@@ -322,6 +324,7 @@ height: 120vh;
   line-height: 20px;
 }
 
+
 }
 
  
@@ -341,9 +344,30 @@ height: 120vh;
 	.navbar .nav-item .dropdown-menu{ margin-top:0; }
 }
 
-/* .owl-image {
-  width: 200px !important;
-  object-fit: cover;
-} */
+.card-text{
+  line-height: 28px;
+  font-size: 24px;
+}
 
-  
+.update{
+  text-align: center;
+  font-size: 20px;
+  margin: 20px;
+}
+
+.card-hover {
+  position: absolute;
+  background-color: white;
+  z-index: 1;
+  opacity: 0;
+}
+
+.card-hover:hover {
+  opacity: 0.5;
+}
+
+.carousel-card{
+  height: 60vh;
+}
+
+
