--- a/index.css
+++ b/index.css
@@ -181,6 +181,38 @@ text-align: center;
   line-height: 50px;
 }
 
+.readbut{
+  border: none;
+  background-color: rgb(92,188,188);
+  padding: 15px 40px ;
+  margin-left: 600px;
+  margin-top: 80px;
+  color: #fff;
+ }
+
+ #ourcom{
+  width: 400px;
+  color: #fff;
+  word-spacing: 5px;
+  line-height: 45px;
+  font-size: 30px;
+  position: absolute;
+  top: 100px;
+  left: 250px;
+  padding-left: 30px;
+ }
+
+ .oppor{
+  font-size: 14px;
+  }
+
+  .prefooter{
+  background-color: rgb(92,188,188) ;
+  height: 40vh;
+  margin-top: 50px;
+  position: relative;
+ }
+
 
 
 
@@ -324,10 +356,31 @@ height: 120vh;
   line-height: 20px;
 }
 
-/* .carousel-card{
-  margin-left: 50px;
-  font-size: 10px;
-} */
+#concar{
+ height: 100px important!;
+} 
+
+.readbut{
+  border: none;
+  background-color: rgb(92,188,188);
+  padding: 15px 40px ;
+  margin-left: 100px;
+  margin-top: 80px;
+  color: #fff;
+ }
+
+ #ourcom{
+  width: 350px;
+  color: #fff;
+  word-spacing: 5px;
+  line-height: 40px;
+  font-size: 25px;
+  position: absolute;
+  top: 60px;
+  left: 50px;
+  padding-left: 30px;
+ }
+
 
 }
 
@@ -347,6 +400,7 @@ height: 120vh;
 	.navbar .nav-item:hover .dropdown-menu{ display: block; }
 	.navbar .nav-item .dropdown-menu{ margin-top:0; }
 }
+
 
 .card-text{
   line-height: 28px;
@@ -370,21 +424,8 @@ height: 120vh;
   opacity: 0.5;
 }
 
-.carousel-card{
-  height: 80vh;
-  font-size: ;
-}
 
-.readbut{
-  border: none;
-  background-color: rgb(92,188,188);
-  padding: 15px 40px ;
-  margin-left: 600px;
-  margin-top: 80px;
-  color: #fff;
- }
 
- .prefooter{
-  background-color: rgb(92,188,188) ;
-  height: 50vh;
- }
+
+
+ 
