--- a/index.css
+++ b/index.css
@@ -240,6 +240,62 @@ text-align: center;
   top: 210px;
  }
 
+.finaldiv{
+  height: 25vh ; 
+  position: relative;
+}
+
+
+
+ .footimg{
+  width: 150px;
+  position: absolute;
+  top: 40px;
+  left: 80px;
+ }
+
+ .parafoot{
+  color: rgb(113,113,113);
+  position:absolute;
+  top: 90px;
+  left: 80px;
+ }
+
+ .listfoot{
+  list-style: none;
+  margin-bottom: 15px;
+ }
+
+ .listfoot1{
+  position: absolute;
+  top: 40px;
+  left: 450px;
+   }
+
+  .linkfoot{
+  text-decoration: none;
+  color: rgb(113,113,113);
+  font-weight: 800;
+  }
+
+.ulfoot{
+  position: absolute;
+right: 600px;
+top: 40px;
+}
+
+.lifoot{
+  list-style: none;
+  margin-bottom: 15px;
+}
+
+
+
+
+
+
+
+
 
 
 @media only screen and (max-width: 600px) {
@@ -417,6 +473,23 @@ height: 120vh;
  .prefooter{
   height: 55vh;
  }
+
+ .listfoot1{
+  position: absolute;
+  top: 200px;
+  left: 50px;
+   }
+
+   .finaldiv{
+    height: 50vh ; 
+   }
+
+   .ulfoot{
+  position: absolute;
+right: 50px;
+top: 200px;
+}
+
 
 
 }
