--- a/index.css
+++ b/index.css
@@ -497,6 +497,13 @@ height: 120vh;
   height: 55vh;
  }
 
+.footimg{
+  width: 120px;
+  top: 40px;
+  left: 140px;
+ }
+
+
  .listfoot1{
   position: absolute;
   top: 200px;
